<package>
  <name>compressed_image_transport</name>
  <version>1.8.6</version>
    <description>
     Compressed_image_transport provides a plugin to image_transport for transparently sending images
     encoded as JPEG or PNG.
  </description>
  <author>Patrick Mihelich</author>
  <author>Julius Kammerl</author>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/image_transport_plugins</url>

  <build_depend>catkin</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>

