<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>theora_image_transport</name>
  <version>1.9.5</version>
  <description>
    Theora_image_transport provides a plugin to image_transport for
    transparently sending an image stream encoded with the Theora codec.
  </description>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/image_transport_plugins</url>
  <author>Patrick Mihelich</author>
  <author>Ethan Dreyfuss</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_cmake</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
 
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libogg</depend>
  <depend>libtheora</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <!--  <build_depend>rosbag</build_depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <image_transport plugin="${prefix}/theora_plugins.xml" />
  </export>
</package>
